exibindo variaveis no html

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,9 @@
   <h1>Guia perguntas!</h1>
   <hr>
   <h3>Lista perguntas!</h3>
+
+  <p>Meu nome é: <strong><%= nome%></strong></p>
+  <p>Minha linguagem favorita é: <strong><%= lang%></strong></p>
+  <p>Trabalho na empresa: <strong> <%= empresa%> </strong></p>
 </body>
 </html>
