feat: estruturas de repeticao com EJS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,15 @@
   <% } else {%>
     <h3>Não tem erro!</h3>
   <% } %>
+
+  <%produtos.forEach(function(produto) {%>
+    <hr>
+    <h4>
+      Nome Produto: <%=produto.nome %>
+    </h4>
+    <p>
+      Preço: <%=produto.preco %>
+    </p>
+  <%})%>
 </body>
 </html>
