--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,11 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Guia perguntas</title>
+ <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <h1>Guia perguntas!</h1>
+  <img src="/img/guia-programador-logo.png" alt="" srcset="">
   <hr>
   <h3>Lista perguntas!</h3>
 
@@ -28,6 +30,6 @@
     <p>
       Preço: <%=produto.preco %>
     </p>
-  <%})%>
+  <% }) %>
 </body>
 </html>
