--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -10,17 +10,22 @@
 </head>
 <body> 
   <div class="container">
-   <h3>Realizar pergunta</h3>
-   <hr>
-   <form action="">
-    <label for="titulo">Titulo</label>
-    <input id="titulo" type="text" placeholder="Titulo" class="form-control">
-    <br/>
-    <label for="descreva">Descrição</label>
-    <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-    <br/>
-    <button class="btn btn-success">Perguntar</button>
-  </form>
+    <div class="card">
+      <div class="card-header">
+        <h3>Realizar pergunta</h3>
+      </div>
+      <div class="card-body">
+        <form action="">
+          <label for="titulo">Titulo</label>
+          <input id="titulo" type="text" placeholder="Titulo" class="form-control">
+          <br/>
+          <label for="descreva">Descrição</label>
+          <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+          <br/>
+          <button class="btn btn-success">Perguntar</button>
+        </form>
+      </div>
+    </div>
   </div>
  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script></body>
