--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,8 +9,13 @@
  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body> 
+  <nav class="navbar navbar-light bg-primary">
+    <a class="navbar-brand" href="/">
+      <img src="/img/guia.png">
+    </a>
+  </nav>
   <div class="container">
-    <div class="card">
+    <div class="card" id="formulario-pergunta">
       <div class="card-header">
         <h3>Realizar pergunta</h3>
       </div>
@@ -22,7 +27,7 @@
           <label for="descreva">Descrição</label>
           <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
           <br/>
-          <button class="btn btn-success">Perguntar</button>
+          <button class="btn btn-primary">Perguntar</button>
         </form>
       </div>
     </div>
