feat: envio de formulario para o node

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -7,7 +7,7 @@
         <h3>Realizar pergunta</h3>
       </div>
       <div class="card-body">
-        <form action="">
+        <form method="post" action="/salvarpergunta">
           <label for="titulo">Titulo</label>
           <input id="titulo" type="text" placeholder="Titulo" class="form-control">
           <br/>
