--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,10 +9,10 @@
       <div class="card-body">
         <form method="post" action="/salvarpergunta">
           <label for="titulo">Titulo</label>
-          <input id="titulo" type="text" placeholder="Titulo" class="form-control">
+          <input id="titulo" type="text" placeholder="Titulo" class="form-control" name="titulo">
           <br/>
           <label for="descreva">Descrição</label>
-          <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+          <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control" name="descricao"></textarea>
           <br/>
           <button class="btn btn-primary">Perguntar</button>
         </form>
