--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -7,12 +7,12 @@
         <h3>Realizar pergunta</h3>
       </div>
       <div class="card-body">
-        <form method="post" action="/salvarpergunta">
-          <label for="titulo">Titulo</label>
-          <input id="titulo" type="text" placeholder="Titulo" class="form-control" name="titulo">
+        <form method="POST" action="/salvarpergunta">
+          <label>Titulo</label>
+          <input type="text" placeholder="Titulo" class="form-control" name="title">
           <br/>
-          <label for="descreva">Descrição</label>
-          <textarea id="descreva" placeholder="Descreva sua pergunta aqui" class="form-control" name="descricao"></textarea>
+          <label>Descrição</label>
+          <textarea placeholder="Descreva sua pergunta aqui" class="form-control" name="description"></textarea>
           <br/>
           <button class="btn btn-primary">Perguntar</button>
         </form>
