--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,5 +2,22 @@
 <body> 
  <%- include ('partials/navbar') %>
  <h1>Estilo do bootstrap</h1>
+ <div class="container">
+  <hr />
+  <h1>Perguntas</h1>
+  <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+  <hr />
+  <% questions.forEach(question => { %>
+    <br />
+    <div class="card">
+      <div class="card-body">
+        <h3><%= question.title  %></h3>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-primary">Responder</button>
+      </div>
+    </div>
+  <% }) %>
+ </div>
 </body>
 <%- include ('partials/footer') %>
