--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,9 @@
         <h3><%= question.title  %></h3>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary">Responder</button>
+        <a href="/pergunta/<%=question.id%>">
+          <button class="btn btn-primary">Responder</button>
+        </a>
       </div>
     </div>
   <% }) %>
