feat: Campo de formulário com valor dinâmico

--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -15,6 +15,7 @@
         class="form-control">
       </textarea>
       <br>
+      <input type="hidden" name="pergunta" value="<%= question.id %>">
       <button type="submit" class="btn btn-primary">Responder</button>
     </form>
   </div>
