--- a/views/pergunta.ejs
+++ b/views/pergunta.ejs
@@ -18,6 +18,18 @@
       <input type="hidden" name="questionId" value="<%= question.id %>">
       <button type="submit" class="btn btn-primary">Responder</button>
     </form>
+    <hr>
+    <h3>Respostas</h3>
+    <hr>
+    <% answers.forEach(answer => { %>
+      <br>
+      <div class="card">
+        <div class="card-body">
+          <p><%=answer.body %></p>
+        </div>
+      </div>
+      <br>
+    <% }) %>
   </div>
 </body>
 <%- include ('partials/footer') %>
